budybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: z-vakhobov
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
