busybox-pod-manifest.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/containerID: dd137f4acefce84b6c8f4916180a755bdb6e2d338ebedd262078597ced3948a8
    cni.projectcalico.org/podIP: 10.233.74.117/32
    cni.projectcalico.org/podIPs: 10.233.74.117/32
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"name":"busybox","namespace":"z-vakhobov"},"spec":{"containers":[{"command":["sleep","3600"],"image":"busybox","name":"busybox"}]}}
  creationTimestamp: "2024-07-31T14:29:17Z"
  name: busybox
  namespace: z-vakhobov
  resourceVersion: "2454162"
  uid: 69f58704-abb9-4f5c-b47d-4c004da84702
spec:
  containers:
  - command:
    - sleep
    - "3600"
    image: busybox
    imagePullPolicy: Always
    name: busybox
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-6z4mx
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: node4
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-6z4mx
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2024-07-31T14:29:19Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2024-07-31T14:29:17Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2024-07-31T14:29:19Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2024-07-31T14:29:19Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2024-07-31T14:29:17Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://e8732ae614d99df9733013985df3e5e1ea44f063899e1ae2d672f294a3ab20f5
    image: docker.io/library/busybox:latest
    imageID: docker.io/library/busybox@sha256:9ae97d36d26566ff84e8893c64a6dc4fe8ca6d1144bf5b87b2b85a32def253c7
    lastState: {}
    name: busybox
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2024-07-31T14:29:18Z"
  hostIP: 10.0.0.3
  hostIPs:
  - ip: 10.0.0.3
  phase: Running
  podIP: 10.233.74.117
  podIPs:
  - ip: 10.233.74.117
  qosClass: BestEffort
  startTime: "2024-07-31T14:29:17Z"
