hr-app-task-6-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-app
  namespace: z-vakhobov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr-app
  template:
    metadata:
      labels:
        app: hr-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.18
