nginx2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
  namespace: z-vakhobov
  labels:
    project: practice
    author: Ziyavuddin
spec:
  containers:
  - name: nginx
    image: nginx
