flask-app-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-clusterip-service
  namespace: z-vakhobov
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
