flask-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: z-vakhobov
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30007
